kubernetes/09-appscrip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appscrip-service
  namespace: appscrip
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: appscrip
