kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appscrip-ingress
  namespace: appscrip
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - appscrip.nextversetech.site
    secretName: appscrip-tls-secret  # Cert-Manager will manage this
  rules:
  - host: appscrip.nextversetech.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appscrip-service
            port:
              number: 80
